--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-grid-list cols="2" rowHeight="2:1" gutterSize="10px">
+<mat-grid-list preload cols="2" rowHeight="2:1" gutterSize="10px">
   <mat-grid-tile>
     <mat-card>
       <mat-card-header>
